--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "version": "0.1.0",
   "author": "Dominic Abela <djmabela@gmail.com>",
   "dependencies": {
-    "@material-ui/core": "^4.0.1",
-    "@material-ui/icons": "^4.2.0",
+    "@material-ui/core": "^4.9.12",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.0.1",
+    "@stripe/stripe-js": "^1.5.0",
     "gatsby": "^2.7.5",
     "gatsby-image": "^2.1.2",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-material-ui": "^2.0.1",
     "gatsby-plugin-offline": "^2.1.1",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.1.2",
+    "gatsby-source-contentful": "^2.3.1",
     "gatsby-source-filesystem": "^2.0.37",
+    "gatsby-source-stripe": "^3.0.7",
+    "gatsby-theme-material-ui": "^1.0.9",
     "gatsby-transformer-sharp": "^2.1.20",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
