--- a/.env.*
+++ b/.env.*
@@ -4,3 +4,6 @@ CONTENTFUL_SPACEID=24mm66m4qnf8
 
 
 STRIP_SECRET_KEY = sk_test_UpF87eL3zURNLDOlC1xLBJz800YFu1NIUa
+
+STRIPE recovery lwtj-vvmy-ckyn-jzzo-ukdi
+
